Emit the from-Glob caller over the codec's own interfaces
AsmCallerGenerator now implements the shape core just moved to : the emitted
class implements tClass and calls dClass, so the output stream a codec carries
is an ALOAD of its own type into the callee's own slot instead of an Object
context, and a leaf is called through its own method rather than a bridge. The
functions travel as Object[] with a CHECKCAST per static, the way the to-Glob
side already did.

What is emitted per field is otherwise unchanged -- the masks, the branchless
isSet/isNull, the boxing of a primitive value, the three Access shapes over a
generated Glob and over core's DefaultGlob32/64/128. The value is still an
Object, being the one argument whose type changes per field.

The Glob is argument 0 of the caller's method, so the cast Glob and the two
per-field scratch slots move to the first slots after everything the pass
carries (Slots, EmittedShape.slotAfterArguments) : a long or a double among
those takes two, where the old constants 4/5/6 assumed two object contexts.

EmittedShape is that pair of interfaces and what both generators need to know
about it -- the two matched methods, the two descriptors, the argument layout,
the digest components. AsmCallerWriteGenerator's private Shape record becomes
it, the two sides differing only in what they put in front of the arguments the
codec chose : nothing there, the Glob and the isSet/isNull/value triple here.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>